tests/ui/traits/const-traits/const_derives/derive-const-non-const-type.stderr
error[E0658]: use of unstable const library feature `const_default`
  --> $DIR/derive-const-non-const-type.rs:10:16
   |
LL | #[derive_const(Default)]
   |                ^^^^^^^ trait is not stable as const yet
   |
   = help: add `#![feature(const_default)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0015]: cannot call non-const associated function `<A as Default>::default` in constant functions
  --> $DIR/derive-const-non-const-type.rs:11:14
   |
LL | #[derive_const(Default)]
   |                ------- in this derive macro expansion
LL | pub struct S(A);
   |              ^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0015, E0658.
For more information about an error, try `rustc --explain E0015`.
